refactor cst